RELEASE 2.0.0 - Using SIMEX 0.6.0 Messaging API
